--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capstone-project-2",
   "version": "1.0.0",
   "description": "This is our javascript capstone project",
-  "main": "index.js",
+  "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
