--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": "true",
   "scripts": {
     "test": "jest",
+    "start": "webpack serve --open",
     "build": "webpack"
   },
   "repository": {
@@ -33,6 +34,7 @@
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.1"
   }
 }
