--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "capstone-project-2",
   "version": "1.0.0",
   "description": "This is our javascript capstone project",
-  "private": "true",
+  "private": true,
   "scripts": {
-    "test": "jest --coverage",
-    "start": "webpack serve --open",
-    "build": "webpack"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,24 +16,9 @@
   "bugs": {
     "url": "https://github.com/elfin-git/Capstone-project-2/issues"
   },
-  "homepage": "https://github.com/elfin-git/Capstone-project-2/dist/",
+  "homepage": "https://github.com/elfin-git/Capstone-project-2#readme",
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "babel-eslint": "^10.1.0",
-    "css-loader": "^6.7.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.26.0",
-    "hint": "^7.1.1",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.0.2",
-    "style-loader": "^3.3.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1"
+    "webpack-cli": "^4.10.0"
   }
 }
