--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is our javascript capstone project",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/elfin-git/Capstone-project-2/issues"
   },
-  "homepage": "https://github.com/elfin-git/Capstone-project-2#readme",
+  "homepage": "https://github.com/elfin-git/Capstone-project-2/dist/",
   "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
