--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is our javascript capstone project",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "start": "webpack serve --open",
     "build": "webpack"
   },
   "repository": {
@@ -19,7 +20,13 @@
   },
   "homepage": "https://github.com/elfin-git/Capstone-project-2/dist/",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.0.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.1"
   }
 }
