--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "css-loader": "^6.7.1",
+    "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.1"
+  },
+  "dependencies": {
+    "autoprefixer": "10.4.5"
   }
 }
